# snowowl

./: .gitignore  .gitmodules  LICENSE  README.md  Snow Owl.sln  azure-pipelines.yml
swl/: CMakeLists.txt  CMakeSettings.json  README.md  build.gradle.kts  local.properties  settings.gradle.kts
swl/app/: build.gradle.kts
swl/app/src/main/: CMakeLists.txt  xcodegen.yml
swl/app/src/main/cpp/: app.cpp  renderer.cpp  rendererBuffer.cpp  rendererBufferBasicClear.cpp  rendererQueue.cpp  rendererSwapchain.cpp  world.cpp
swl/app/src/main/headers/: app.h  renderer.hpp  rendererBuffer.hpp  rendererBufferBasicClear.hpp  rendererQueue.hpp  rendererSwapchain.hpp  world.hpp
swl/app/src/main/hlsl/: common.h  simple.frag  simple.vert
swl/app/src/main/platform/darwin/: Info.plist
swl/app/src/main/platform/uwp/: app_TemporaryKey.pfx  package.appxManifest  resources.pri
swl/app/src/main/platform/windows/: app.aps  app.rc  resource.h
swl/app/src/main/spirv/: simple-frag.spv  simple-vert.spv
swl/app/src/test/cpp/: app_test.cpp
swl/buildDir/: addTesting.cmake  applyPlatformFlags.cmake  compileShaders.cmake  importVulkan.cmake
swl/buildSrc/: build.gradle.kts
swl/swl-cx/: CMakeLists.txt  README.md  build.gradle.kts
swl/swl-cx/src/main/: CMakeLists.txt  reflection.hpp  xcodegen.yml
swl/swl-cx/src/main/cpp/: core.cpp  game_loop.cpp  path.cpp  path_ops.cpp  path_ops.hpp  point_operators.cpp
swl/swl-cx/src/main/platform/darwin/: PathImpl.cpp  file_manager.mm
swl/swl-cx/src/main/platform/uwp/: file_manager.cpp
swl/swl-cx/src/main/platform/windows/: PathImpl.cpp  file_manager.cpp
swl/swl-cx/src/main/public/: core.hpp  data.hpp  file_manager.hpp  game_loop.h  game_loop.hpp  header.hpp  headerconv.hpp  hidden_implem.hpp  matrix.hpp  ownership.hpp  ownership_exp.hpp  path.hpp  path_make.hpp  point.hpp  point_make.hpp  point_operators.hpp  rect.hpp  rect_make.hpp  tell.hpp
swl/swl-cx/src/platform/windows/: PathImpl.cpp
swl/swl-cx/src/test/: CMakeLists.txt
swl/swl-cx/src/test/cpp/: main.cpp  ownership_test.cpp  path_test.cpp  point_test.cpp
swl/swl-gx/: CMakeLists.txt  README.md  build.gradle.kts
swl/swl-gx/src/main/: CMakeLists.txt  xcodegen.yml
swl/swl-gx/src/main/cpp/: Device.cpp  buffer_allocator.cpp  context.cpp  context_backend_vulkan.cpp  device.cpp  device_backend_vulkan.cpp  graphics.cpp  graphics_buffer_allocator.cpp  graphics_context.cpp  graphics_pass.cpp  graphics_pipeline.cpp  graphics_queue.cpp  graphics_render_block.cpp  graphics_render_pass.cpp  graphics_render_pipeline.cpp  graphics_swap_chain.cpp  queue.cpp  render_block.cpp  render_pass.cpp  render_pipeline.cpp  surface.cpp  swap_chain.cpp  transfer_block.cpp  vulkanGraphicsContext.cpp  vulkanGraphicsQueue.cpp  vulkanGraphicsSwapChain.cpp  vulkan_context.cpp  vulkan_fence_lock.cpp  vulkan_queue.cpp  vulkan_shader.cpp  vulkan_swap_chain.cpp
swl/swl-gx/src/main/headers/: swl_vulkan.hpp  vulkanGraphicsBackend.hpp  vulkan_graphics_backend.hpp
swl/swl-gx/src/main/platform/darwin/: swl_vulkan.cpp  swl_vulkan_mac.hpp  vulkanGraphicsBackend.cpp  vulkan_graphics_backend.cpp
swl/swl-gx/src/main/platform/windows/: swl_vulkan.cpp  swl_vulkan_win32.cpp  swl_vulkan_win32.hpp  vulkanGraphicsBackend.cpp  vulkan_graphics_backend.cpp
swl/swl-gx/src/main/public/: buffer.hpp  buffer_allocator.hpp  buffer_view.hpp  context.hpp  context_backend.hpp  context_backend_vulkan.hpp  device.hpp  device_backend.hpp  device_backend_vulkan.hpp  factory.hpp  graphics.hpp  graphicsBuffer.hpp  graphicsCanvas.hpp  graphicsContext.hpp  graphicsSwapChain.h  graphicsSwapchain.hpp  graphics_buffer.hpp  graphics_buffer_allocator.hpp  graphics_context.hpp  graphics_pass.hpp  graphics_pipeline.hpp  graphics_queue.hpp  graphics_render_block.hpp  graphics_render_pass.hpp  graphics_render_pipeline.hpp  graphics_resource_reference.hpp  graphics_sampler.hpp  graphics_shader.hpp  graphics_swap_chain.hpp  pipeline.hpp  queue.hpp  render_block.hpp  render_pass.hpp  render_pipeline.hpp  resource_reference.hpp  sampler.hpp  screen.hpp  shader.hpp  surface.hpp  swap_chain.hpp  (+13 more)
swl/swl-gx/src/main/public/directx/: buffer.h  buffer_allocator.h  context.h  factory.h  pipeline.h  queue.h  render_block.h  render_pass.h  render_pipeline.h  resource_reference.h  swap_chain.h  transfer_block.h
swl/swl-gx/src/main/public/metal/: context.h  mtl_buffer.h  mtl_context.h  mtl_cpu_fence.h  mtl_pass.h  mtl_pipeline.h  mtl_queue.h  mtl_render_block.h  mtl_render_pass.h  mtl_render_pipeline.h  mtl_swap_chain.h  queue.h  render_block.h  render_pipeline.h  swap_chain.h
swl/swl-gx/src/platform/darwin/: Test.cpp
swl/swl-gx/src/test/: CMakeLists.txt
swl/swl-gx/src/test/cpp/: context_test.cpp  device_test.cpp  main.cpp
swl/swl-rd/: README.md
swl/swl-rd/src/main/: CMakeLists.txt  xcodegen.yml
swl/swl-rd/src/main/cpp/: entity.cpp  graph_node.cpp  graph_node_argument.cpp  layer.cpp  world.cpp  world_renderer.cpp
swl/swl-rd/src/main/cpp/graph_nodes/: diffuse.cpp  vertex.cpp
swl/swl-rd/src/main/public/: entity.hpp  graph_node.hpp  graph_node_argument.hpp  graph_node_effect.hpp  layer.hpp  layer_camera.hpp  world.hpp  world_renderer.hpp  world_renderer_context.hpp
swl/swl-rd/src/main/public/graph_nodes/: diffuse.hpp  vertex.hpp
swl/swl-rd/src/test/: CMakeLists.txt
swl/swl-rd/src/test/cpp/: main.cpp
swl/swl-ui/: CMakeLists.txt  build.gradle.kts
swl/swl-ui/src/main/: CMakeLists.txt  xcodegen.yml
swl/swl-ui/src/main/cpp/: application.cpp  ui.cpp  window.cpp  windowSurface.cpp  window_surface.cpp
swl/swl-ui/src/main/headers/: swl_window_backend.hpp  swl_window_sink.cpp  swl_window_sink.hpp
swl/swl-ui/src/main/platform/darwin/: swl_application.hxx  swl_application.mm  swl_view.hxx  swl_view.mm  swl_window.hxx  (+4 more)
swl/swl-ui/src/main/platform/darwin-ios/: swl_application.h  swl_application.mm  swl_scene.h  swl_scene.mm  swl_window_backend.mm
swl/swl-ui/src/main/public/: application.hpp  event.hpp  ui.hpp  window.hpp  windowSurface.hpp  window_surface.hpp
swl/swl-ui/src/test/: CMakeLists.txt
swl/swl-ui/src/test/cpp/: main.cpp  main_darwin.cpp
(+59 files in other folders)
